# CircuitPython_DS1306

./: LICENSE  README.rst  README.rst.license  ds1306.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
docs/: conf.py  index.rst
examples/: ds1306_simpletest.py
